2005-10-06  Sebastien Pouliot  <sebastien@ximian.com>

	* ASN1Convert.cs: Better handle big integer than cannot be interpreted
	as a negative number (don't extend). Fix bug #75778.

2004-12-15  Sebastien Pouliot  <sebastien@ximian.com>

	* ASN1.cs: Fixed warning for unused variable.

2004-10-29  Sebastien Pouliot  <sebastien@ximian.com>

	* ASN1.cs: Throw an NotSupportedException when "undefined length 
	encoding" is used (#68903 but it's not a fix ;-). Fixed GetBytes to
	encode structures bigger than 64k (fix #68907). Simplified ToString
	and added Length to help debugging.
	* PKCS7.cs: Added a flag to avoid resigning a structure (which was
	duplicating some attributes).

2004-09-16  Sebastien Pouliot  <sebastien@ximian.com>

	* ASN1.cs: Fixed warning (l4) for unused variable.
	* PKCS7.cs: Fixed warning (l4) for unused variable.
	* Uri.cs: Fixed warning (l4) for unused variables. Remove sealed from
	class to reduce number of warnings.

2004-08-30  Sebastien Pouliot  <sebastien@ximian.com>

	* Uri.cs: Copied from System.dll assembly and started adaptation for
	it's reuse inside the security classes (CAS).

2004-06-08  Sebastien Pouliot  <sebastien@ximian.com>

	* StrongName.cs: Added corlib specific code to load configuration
	from machine.config to allow public key token remapping to work
	with (for example) gacutil.
	* StrongNameManager.cs: Now load configuration from machine.config.

2004-05-19  Sebastien Pouliot  <sebastien@ximian.com>

	* PKCS7.cs: In sync with Mono.Security.dll version.

2004-05-18  Sebastien Pouliot  <sebastien@ximian.com>

	* ASN1Convert.cs: In sync with Mono.Security.dll version.
	* StrongName.cs: In sync with Mono.Security.dll version.

2004-05-03  Sebastien Pouliot  <sebastien@ximian.com>

	* ASN1.cs: Fixed NullReferenceException in xmldsig standalone tests.

2004-04-28  Sebastien Pouliot  <sebastien@ximian.com>

	* ASN1.cs: In sync with Mono.Security.dll version.
	* ASN1Convert.cs: In sync with Mono.Security.dll version.