@@ -9,8 +9,6 @@
 //
 
 //
-// Copyright (C) 2004 Novell, Inc (http://www.novell.com)
-//
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
 // "Software"), to deal in the Software without restriction, including
@@ -116,6 +114,11 @@ namespace Mono.Security {
 		{
 		}
 
+		public StrongName (int keySize)
+		{
+			rsa = new RSAManaged (keySize);
+		}
+
 		public StrongName (byte[] data)
 		{
 			if (data == null)
@@ -197,8 +200,9 @@ namespace Mono.Security {
 		public byte[] PublicKey {
 			get { 
 				if (publicKey == null) {
-					byte[] keyPair = CryptoConvert.ToCapiKeyBlob (rsa, false); 
-					publicKey = new byte [32 + 128]; // always 1024 bits
+					byte[] keyPair = CryptoConvert.ToCapiKeyBlob (rsa, false);
+					// since 2.0 public keys can vary from 384 to 16384 bits
+					publicKey = new byte [32 + (rsa.KeySize >> 3)];
 
 					// The first 12 bytes are documented at:
 					// http://msdn.microsoft.com/library/en-us/cprefadd/html/grfungethashfromfile.asp
