@@ -1,3 +1,8 @@
+2005-11-07  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* StrongName.cs: Synch with Mono.Security.dll to get support for 
+	strongname keypairs different from 1024 bits.
+
 2005-10-06  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* ASN1Convert.cs: Better handle big integer than cannot be interpreted
